<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="30dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/na_fw_txt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/na_fw_time"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/na_fw_time2"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/na_3v3_txt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/na_3v3_time"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/na_3v3_time2"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="30dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/eu_fw_txt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/eu_fw_time"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/eu_3v3_txt" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/eu_3v3_time"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:paddingLeft="4dip"
                android:text="@string/none" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dip" />
        </TableRow>
    </TableLayout>

</ScrollView>